--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="15dp">
         <RelativeLayout
+            android:id="@+id/item_video_all"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
