--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingTop="10dp">
-        <com.example.learning_machine.RoundImageView
+        <com.example.learning_machine.View.RoundImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="10dp"
@@ -54,7 +54,7 @@
                 android:textSize="14sp"
                 android:textColor="#fff"/>
         </LinearLayout>
-        <com.example.learning_machine.RoundImageView
+        <com.example.learning_machine.View.RoundImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="10dp"
