--- a/app/src/main/res/layout/activity_collect.xml
+++ b/app/src/main/res/layout/activity_collect.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back_grad"
-    tools:context=".CollectActivity">
+    tools:context=".Video.CollectActivity">
 
 
     <androidx.cardview.widget.CardView
