--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/back_grad"
-    tools:context=".VoiceActivity">
+    tools:context=".Chat.VoiceActivity">
 
 
     <androidx.cardview.widget.CardView
@@ -38,7 +38,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="70dp"
                 android:background="#FDF9FC"
                 android:orientation="horizontal">
 
@@ -46,23 +46,22 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_gravity="center_vertical"
                     android:src="@mipmap/machine_add" />
 
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_gravity="center_vertical"
                     android:src="@mipmap/machine_icon" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="50dp"
                     android:layout_alignParentRight="true"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="5dp"
@@ -72,24 +71,24 @@
                     <EditText
                         android:id="@+id/voice_et_input"
                         android:layout_width="0dp"
-                        android:layout_height="24dp"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="3dp"
                         android:layout_weight="1"
                         android:background="@null"
-                        android:hint="请输入您的问题"
+                        android:hint="请输入问题"
                         android:paddingLeft="10dp"
-                        android:textSize="14sp" />
+                        android:textSize="18sp" />
 
                     <Button
                         android:id="@+id/voice_btn_send"
-                        android:layout_width="70dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_margin="2dp"
                         android:background="@drawable/send_machine"
                         android:text="发送"
                         android:textColor="#fff"
-                        android:textSize="14sp" />
+                        android:textSize="18sp" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
