--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/bg_qsyk"
     tools:context=".MainActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="320dp"
+        android:layout_centerInParent="true"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:orientation="horizontal">
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:elevation="10dp"
+            app:cardMaxElevation="10dp"
+            app:cardCornerRadius="20dp">
+            <RelativeLayout
+                android:id="@+id/main_rl_map"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="走进中国"
+                    android:layout_above="@id/main_tv_map"
+                    android:gravity="center"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/qsyk_txt"/>
+                <TextView
+                    android:id="@+id/main_tv_map"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="走进中国走进中国走进中国"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:textSize="10sp"
+                    android:textColor="@color/qsyk_txt"/>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:elevation="10dp"
+            app:cardMaxElevation="10dp"
+            app:cardCornerRadius="20dp">
+            <RelativeLayout
+                android:id="@+id/main_rl_story"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="小牛故事会"
+                    android:layout_above="@id/main_tv_story"
+                    android:gravity="center"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/qsyk_txt"/>
+                <TextView
+                    android:id="@+id/main_tv_story"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="小牛故事会小牛故事会小牛故事会"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:textSize="10sp"
+                    android:textColor="@color/qsyk_txt"/>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:elevation="10dp"
+            app:cardMaxElevation="10dp"
+            app:cardCornerRadius="20dp">
+            <RelativeLayout
+                android:id="@+id/main_rl_cook"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="学做饭"
+                    android:layout_above="@id/main_tv_cook"
+                    android:gravity="center"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/qsyk_txt"/>
+                <TextView
+                    android:id="@+id/main_tv_cook"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="学做饭学做饭学做饭"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:textSize="10sp"
+                    android:textColor="@color/qsyk_txt"/>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:elevation="10dp"
+            app:cardMaxElevation="10dp"
+            app:cardCornerRadius="20dp">
+            <RelativeLayout
+                android:id="@+id/main_rl_xmly"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="喜马拉雅"
+                    android:layout_above="@id/main_tv_xmly"
+                    android:gravity="center"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/qsyk_txt"/>
+                <TextView
+                    android:id="@+id/main_tv_xmly"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="喜马拉雅喜马拉雅喜马拉雅"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:textSize="10sp"
+                    android:textColor="@color/qsyk_txt"/>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:elevation="10dp"
+            app:cardMaxElevation="10dp"
+            app:cardCornerRadius="20dp">
+            <RelativeLayout
+                android:id="@+id/main_rl_chat"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="聊天室"
+                    android:layout_above="@id/main_tv_chat"
+                    android:gravity="center"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/qsyk_txt"/>
+                <TextView
+                    android:id="@+id/main_tv_chat"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="聊天室聊天室聊天室"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:textSize="10sp"
+                    android:textColor="@color/qsyk_txt"/>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
+</RelativeLayout>
