--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="btn_rect_alpha">#56b3b3b3</color>
 
     <color name="text_color">#525059</color>
+    <color name="qsyk_txt">#8A8A8A</color>
     <color name="main_blue">#74D4E1</color>
     <color name="fade_blue">#DFEEF3</color>
     <color name="text_black_color">#42555B</color>
