--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,27 @@
     android:background="@mipmap/bg_qsyk"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/main_iv_back"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@mipmap/main_back"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"/>
+    <ImageView
+        android:id="@+id/main_iv_home"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@mipmap/home"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="20dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="320dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="70dp"
         android:layout_centerInParent="true"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
