--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -6,93 +6,80 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/back_grad"
+    android:background="@mipmap/bg_qsyk"
     tools:context=".Chat.VoiceActivity">
 
 
-    <androidx.cardview.widget.CardView
+    <ImageView
+        android:id="@+id/voice_iv_back"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@mipmap/main_back"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"/>
+    <ImageView
+        android:id="@+id/voice_iv_home"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@mipmap/home"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="20dp"/>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp"
-        app:cardCornerRadius="25dp">
+        android:orientation="vertical"
+        android:paddingTop="50dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/voice_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingTop="10dp">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/voice_rv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="10dp"
-                android:layout_weight="1" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#FFEEEEEE" />
-
+            android:layout_height="70dp"
+            android:orientation="horizontal">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:background="#FDF9FC"
+                android:layout_height="50dp"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/send_background"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="10dp"
+                <EditText
+                    android:id="@+id/voice_et_input"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:src="@mipmap/machine_add" />
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:hint="请输入问题或语音输入"
+                    android:paddingLeft="10dp"
+                    android:textSize="22sp" />
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_gravity="center_vertical"
-                    android:src="@mipmap/machine_icon" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginBottom="5dp"
-                    android:background="@drawable/send_background"
-                    android:orientation="horizontal">
-
-                    <EditText
-                        android:id="@+id/voice_et_input"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="3dp"
-                        android:layout_weight="1"
-                        android:background="@null"
-                        android:hint="请输入问题"
-                        android:paddingLeft="10dp"
-                        android:textSize="18sp" />
-
-                    <Button
-                        android:id="@+id/voice_btn_send"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_margin="2dp"
-                        android:background="@drawable/send_machine"
-                        android:text="发送"
-                        android:textColor="#fff"
-                        android:textSize="18sp" />
-                </LinearLayout>
+                <Button
+                    android:id="@+id/voice_btn_send"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="2dp"
+                    android:background="@drawable/send_machine"
+                    android:text="发送"
+                    android:textColor="#fff"
+                    android:textSize="22sp" />
             </LinearLayout>
         </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </RelativeLayout>
