--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,19 +10,19 @@
 
     <ImageView
         android:id="@+id/main_iv_back"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@mipmap/main_back"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_width="48px"
+        android:layout_height="48px"
+        android:layout_marginLeft="40px"
+        android:layout_marginTop="40px"
+        android:src="@mipmap/main_back" />
     <ImageView
         android:id="@+id/main_iv_home"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="48px"
+        android:layout_height="48px"
         android:src="@mipmap/home"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginRight="40px"
+        android:layout_marginTop="40px"/>
 
     <LinearLayout
         android:layout_width="match_parent"
