--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -12,47 +12,50 @@
 
     <ImageView
         android:id="@+id/voice_iv_back"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@mipmap/main_back"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_width="48px"
+        android:layout_height="48px"
+        android:layout_marginLeft="40px"
+        android:layout_marginTop="40px"
+        android:src="@mipmap/main_back"/>
     <ImageView
         android:id="@+id/voice_iv_home"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="48px"
+        android:layout_height="48px"
         android:src="@mipmap/home"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginRight="40px"
+        android:layout_marginTop="40px"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingTop="50dp">
+        android:paddingTop="100px">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/voice_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginLeft="40px"
+            android:layout_marginRight="40px"
             android:layout_marginBottom="10dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:overScrollMode="never"
+            android:scrollbars="none"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40px"
             android:orientation="horizontal">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="5dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginLeft="30dp"
+                android:layout_marginRight="40px"
+                android:layout_marginLeft="40px"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/send_background"
                 android:orientation="horizontal">
@@ -66,18 +69,19 @@
                     android:layout_weight="1"
                     android:background="@null"
                     android:hint="请输入问题或语音输入"
-                    android:paddingLeft="10dp"
-                    android:textSize="22sp" />
+                    android:maxLines="5"
+                    android:padding="10dp"
+                    android:textSize="20sp" />
 
                 <Button
                     android:id="@+id/voice_btn_send"
-                    android:layout_width="wrap_content"
+                    android:layout_width="128dp"
                     android:layout_height="match_parent"
                     android:layout_margin="2dp"
                     android:background="@drawable/send_machine"
                     android:text="发送"
                     android:textColor="#fff"
-                    android:textSize="22sp" />
+                    android:textSize="20sp" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
