--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -6,31 +6,81 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@mipmap/bg_qsyk"
     tools:context=".Chat.VoiceActivity">
 
 
     <ImageView
         android:id="@+id/voice_iv_back"
-        android:layout_width="48px"
-        android:layout_height="48px"
-        android:layout_marginLeft="40px"
-        android:layout_marginTop="40px"
-        android:src="@mipmap/main_back"/>
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="48px"
+        android:src="@mipmap/main_back" />
+
     <ImageView
         android:id="@+id/voice_iv_home"
-        android:layout_width="48px"
-        android:layout_height="48px"
-        android:src="@mipmap/home"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="40px"
-        android:layout_marginTop="40px"/>
+        android:layout_marginTop="48px"
+        android:layout_marginRight="60dp"
+        android:src="@mipmap/home" />
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="98px"
+        android:text="聊天室"
+        android:textSize="32px"
+        android:textColor="@color/main_blue"/>
+
+    <ImageView
+        android:id="@+id/voic_iv_talk"
+        android:layout_width="292px"
+        android:layout_height="292px"
+        android:layout_centerInParent="true"
+        android:src="@mipmap/voice" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:paddingTop="10dp">
+        <ImageView
+            android:layout_width="168dp"
+            android:layout_height="236dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="30dp"
+            android:src="@mipmap/you"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="left">
+
+            <TextView
+                android:id="@+id/it_tv_y"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:background="@drawable/popobg"
+                android:gravity="left"
+                android:text="小朋友，休息间隙可以跟我聊聊天哦！\n我一直在等你哦。"
+                android:textColor="@color/main_blue"
+                android:textSize="24sp" />
+        </RelativeLayout>
+    </LinearLayout>
+
+<!--
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingTop="100px">
+        android:paddingTop="120px">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/voice_rv"
@@ -85,5 +135,6 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+-->
 
 </RelativeLayout>
